# panda3d

./: .gitignore
cmake/modules/: FindRmlUi.cmake
doc/: BUILDING_VULKAN_MACOS.md  INSTALL
dtool/: Package.cmake
makepanda/: installer.nsi  makepanda.py  makewheel.py
panda/: CMakeLists.txt
panda/src/cocoadisplay/: cocoaGraphicsWindow.h  cocoaGraphicsWindow.mm  cocoaPandaView.h  cocoaPandaView.mm
panda/src/display/: graphicsEngine.cxx  graphicsStateGuardian.I  graphicsStateGuardian.cxx  graphicsStateGuardian.h  shaderInputBinding_impls.cxx
panda/src/gobj/: shaderModule.cxx  simpleAllocator.cxx
panda/src/pandabase/: pandasymbols.h
panda/src/pgraphnodes/: shaderGenerator.cxx
panda/src/putil/: bam.h
panda/src/rmlui/: CMakeLists.txt  config_rmlui.cxx  config_rmlui.h  p3rmlui_composite.cxx  rmlContext.cxx  rmlContext.h  rmlDataModel.cxx  rmlDataModel.h  rmlDocument.cxx  rmlDocument.h  rmlElement.cxx  rmlElement.h  rmlEvent.h  rmlFileInterface.cxx  rmlInputHandler.cxx  rmlInputHandler.h  rmlPythonUtil.h  rmlRegion.cxx  rmlRegion.h  rmlRenderInterface.cxx  rmlRenderInterface.h  rmlSystemInterface.cxx  rmlSystemInterface.h
panda/src/shaderpipeline/: CMakeLists.txt  shaderCompilerGlslang.cxx  shaderCompilerGlslang.h  shaderModuleSpirV.cxx  spirVFlattenStructPass.cxx  spirVHoistStructResourcesPass.cxx  spirVInjectAlphaTestPass.cxx  spirVInjectAlphaTestPass.h  spirVTransformer.cxx
panda/src/vulkandisplay/: CMakeLists.txt  config_vulkandisplay.cxx  config_vulkandisplay.h  vulkanCommandBuffer.cxx  vulkanFrameData.h  vulkanFramebuffer.cxx  vulkanFramebuffer.h  vulkanGraphicsBuffer.cxx  vulkanGraphicsPipe.cxx  vulkanGraphicsStateGuardian.cxx  vulkanGraphicsStateGuardian.h  vulkanGraphicsWindow.cxx  vulkanGraphicsWindow.h  vulkanShaderContext.I  vulkanShaderContext.cxx  vulkanShaderContext.h  vulkanTextureContext.cxx  vulkanTextureContext.h
pandatool/src/deploy-stub/: CMakeLists.txt
repro/: README.md  repro_hoist_all_resource_struct.py  repro_many_render_textures.py  repro_offscreen_invalid_resource.py  repro_transform_table_null_deref.py  repro_tristrip_cut_index.py
samples/chessboard/: main.py
samples/chessboard/ui/: chess.rcss  game.rml  menu.rml  play.rml  profile.rml  puzzles.rml  settings.rml
samples/rmlui-demo/: main.py
samples/rmlui-demo/assets/: demo.rcss  demo.rml
samples/rmlui-features/: main.py
samples/rmlui-features/assets/: features.rcss  features.rml
samples/rmlui-samples/: 01_features.py  02_benchmark.py  03_data_binding.py  04_rpgui_demo.py  05_invaders.py
samples/rmlui-samples/assets/: benchmark.rml  data_binding.rml  features.rcss  features.rml  invaders_background.rml  invaders_game.rml  invaders_help.rml  invaders_high_score.rml  invaders_main_menu.rml  invaders_options.rml  invaders_start_game.rml  rpgui.rcss  rpgui_demo.rml
samples/rocket-console/: console.py  main.py
tests/rmlui/: test_rmlui_context.py  test_rmlui_datamodel.py  test_rmlui_invaders_sample.py  test_rmlui_lifetime.py
tests/shaderpipeline/: test_spirv_hoist_struct_resources_pass.cxx
